--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Prova Online</a>
@@ -46,14 +46,16 @@
                 <li><a href="source/disciplina.html"> Introdução a Programação </a></li>
             </ul>
         </li>
+        <!--
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Contato</a></li>
+        -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li id="signup-topbar"><a href="source/register.html"><span class="glyphicon glyphicon-user"></span> Cadastrar</a></li>
             <li id="login-topbar"><a href="source/login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             <li id="user-name-topbar"><a id="username-topbar" href="#"><span class="glyphicon glyphicon-user"></span></a></li>
-            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
 
         <!--
@@ -86,7 +88,7 @@
         <div class="item active">
             <img src="image/slideshow-1.jpg" alt="Image">
             <div class="carousel-caption">
-                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Engenharia de Software</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a nisi commodo, facilisis neque eu, posuere lorem. Phasellus quis accumsan.</p>
             </div>
           </div>
@@ -94,7 +96,7 @@
           <div class="item">
             <img src="image/slideshow-2.jpg" alt="Image">
             <div class="carousel-caption">
-              <h3>Lorem ipsum dolor sit amet, consectetur.</h3>
+              <h3>Linguagens de Programação</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla odio ipsum, placerat nec cursus eu, egestas sit amet nunc. Nulla.</p>
             </div>
           </div>
@@ -110,8 +112,8 @@
           <span class="sr-only">Next</span>
         </a>
     </div>
-
-
+<br>
+<br>
 <div class="container-fluid text-center">
 
     <div class="row content">
@@ -143,7 +145,10 @@
         </div>
     </div>
 </div>
-
+<br>
+<br>
+<br>
+<br>
 <footer class="container-fluid text-center">
     <p>Copyright © 2018 Provas On-line. Todos os direitos reservados.</p>
 </footer>
